details_app/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: details-app-service-latest
  labels:
    app: details-app
    version: latest
spec:
  type: LoadBalancer
  selector:
    app: details-app
    version: latest
  ports:
  - protocol: TCP
    port: 8000          # External port for latest version
    targetPort: 8000  # Internal port in the container

---
apiVersion: v1
kind: Service
metadata:
  name: postgres-container
  labels:
    app: postgres
    version: latest
spec:
  type: LoadBalancer
  selector:
    app: postgres
    version: latest
  ports:
  - protocol: TCP
    port: 5432          # External port for latest version
    targetPort: 5432  # Internal port in the container
